# Chrome-T-Rax-Game-Clone

./: .gitignore  CMakeLists.txt  README.md  build.sh
code/: againButton.hpp  cloud.hpp  context.hpp  entity.hpp  game.hpp  ground.hpp  obst.hpp  ptclr.hpp  trex.hpp
src/: cloud.hpp  game.hpp  ground.hpp  settings.hpp  trex.hpp
